# keepass-rs

./: .gitignore  .tarpaulin.toml  .travis.yml  AGENTS.md  AI-DECLARATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codecov.yml  commitlintrc.json  flake.nix  rustfmt.toml  test.xml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  coverage.yml  merge.yml  rust-ci.yml
benches/: bench.rs
examples/: merge_databases.rs  open_database.rs  save_database.rs
src/: build.rs  compression.rs  config.rs  crypt.rs  db.rs  db_parse.rs  decompress.rs  decrypt.rs  error.rs  ffi.rs  hmac_block_stream.rs  key.rs  keyfile.rs  lib.rs  otp.rs  result.rs  totp.rs  variant_dictionary.rs  xml_parse.rs  xmlparse.rs
src/crypt/: cipher.rs  ciphers.rs  kdf.rs  mod.rs
src/db/: entry.rs  fields.rs  group.rs  load.rs  merge.rs  meta.rs  mod.rs  node.rs  open.rs  otp.rs  save.rs  serialization.rs
src/db/types/: attachment.rs  autotype.rs  color.rs  custom_data.rs  entry.rs  group.rs  history.rs  icon.rs  meta.rs  mod.rs  times.rs  value.rs
src/format/: hmac_block_stream.rs  io.rs  kdb.rs  kdbx3.rs  kdbx4.rs  mod.rs  variant_dictionary.rs
src/format/kdbx4/: dump.rs  mod.rs  parse.rs
src/format/xml_db/: custom_serde.rs  entry.rs  group.rs  meta.rs  mod.rs  tags.rs  times.rs  timestamp.rs
src/format/xml_db/dump/: entry.rs  group.rs  meta.rs  mod.rs
src/format/xml_db/parse/: entry.rs  group.rs  meta.rs  mod.rs
src/key/: mod.rs  yubikey.rs
src/olddb/: entry.rs  group.rs  merge.rs  meta.rs  mod.rs  otp.rs
src/parse/: kdb.rs  kdbx3.rs  kdbx4.rs  mod.rs
src/xml_db/: mod.rs
src/xml_db/dump/: entry.rs  group.rs  meta.rs  mod.rs
src/xml_db/parse/: entry.rs  group.rs  meta.rs  mod.rs
tests/: binary_pool.rs  broken_files.rs  cross_tool.rs  deletion_tests.rs  entry_tests.rs  file_read_tests.rs  kdbx41_features.rs  keepassxc_writer_compat_tests.rs  keyfile_formats.rs  large_database_roundtrip_tests.rs  merge_reexport.rs  ordering_tests.rs  spec_round_trip.rs  tag_serialization.rs  wasm_open_database.rs
tests/common/: mod.rs
tests/resources/: attachment_history.kdbx  broken_kdbx_version.kdbx  broken_random_data.kdbx  groups_entries_alternating.kdbx  inner_xml_with_custom_fields.xml  strongbox_kdbx4_no_isexpanded.kdbx  test_db_few_rounds.kdbx  test_db_kdb3_with_file_larger_1mb.kdbx  test_db_kdb_with_password.kdb  test_db_kdbx3_with_chacha20_protected_fields.kdbx  test_db_kdbx41_features.kdbx  test_db_kdbx41_with_password_aes.kdbx  test_db_kdbx4_with_empty_group_names.kdbx  test_db_kdbx4_with_empty_root_group_name.kdbx  test_db_kdbx4_with_keyfile.kdbx  test_db_kdbx4_with_keyfile_v2.kdbx  test_db_kdbx4_with_keyfile_v2.keyx  test_db_kdbx4_with_keyfile_v2_alt.kdbx  test_db_kdbx4_with_keyfile_v2_alt.keyx  test_db_kdbx4_with_password.kdbx  test_db_kdbx4_with_password_aes.kdbx  test_db_kdbx4_with_password_argon2.kdbx  test_db_kdbx4_with_password_argon2_chacha20.kdbx  test_db_kdbx4_with_password_argon2_twofish.kdbx  test_db_kdbx4_with_password_argon2id.kdbx  test_db_kdbx4_with_password_argon2id_chacha20.kdbx  test_db_kdbx4_with_password_argon2id_twofish.kdbx  test_db_kdbx4_with_password_deleted_entry.kdbx  test_db_kdbx4_with_totp_entry.kdbx  test_db_kdbx4_with_totp_sha512_entry.kdbx  test_db_with_challenge_response_key.kdbx  test_db_with_key.kdbx  test_db_with_keyfile.kdbx  test_db_with_keyfile_xml.kdbx  test_db_with_password.kdbx  test_key.key
