[package]
name = "keepass"
description = "KeePass .kdbx database file parser"
edition = "2018"

homepage = "https://github.com/sseemayer/keepass-rs"
repository = "https://github.com/sseemayer/keepass-rs"
documentation = "https://docs.rs/keepass"

version = "0.5.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
license = "MIT"

readme = "README.md"

[features]
utilities = ["anyhow", "clap", "rpassword", "serialization"]
serialization = ["serde", "serde_json", "chrono/serde"]

default = []

[dependencies]
thiserror = "1"

# encoding and parsing
byteorder = "1"
flate2 = "1"
xml-rs = "0.8"
base64 = "0.21"
hex-literal = "0.3"
secstr = "0.5"
chrono = "0.4.23"

# cryptography
rust-argon2 = "1.0"
sha2 = "0.10"
aes = "0.8"
block-modes = "0.9"
hmac = "0.12"
salsa20 = "0.10"
chacha20 = "0.9"
cipher = { version = "0.4", features = ["std"] }
twofish = "0.7"
cbc = "0.1"
totp-lite = "2.0.0"
url = "2.2.2"
base32 = "0.4.0"

uuid = { version = "1.2", features = ["v4"] }
getrandom = { version = "0.2" }

# dependencies for command-line utilities
anyhow = { version = "1", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
rpassword = { version = "7", optional = true }

# dependencies for serialization (enabled by "serialization" feature)
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

rustfmt = "0.10.0"

[[bin]]
name = "kp-dump-json"
required-features = ["utilities"]

[[bin]]
name = "kp-dump-xml"
required-features = ["utilities"]

[[bin]]
name = "kp-show-db"
required-features = ["utilities"]

[[bin]]
name = "kp-show-otp"
required-features = ["utilities"]
